--- a/grocery_app/templates/base.html
+++ b/grocery_app/templates/base.html
@@ -11,12 +11,21 @@
             {% for message in get_flashed_messages() %}
                 <p>{{ message }}</p>
             {% endfor %}
+            {% if current_user.is_authenticated %}
+            <p>Logged in as {{ current_user.username }}</p>
+            {% endif %}
             <hr>
             <nav>
                 <a href="/">Home</a>
                 <div>
                     <a href="/new_store">New Store</a>
                     <a href="/new_item">New Item</a>
+                    {% if current_user.is_authenticated %}
+                        <a href="/logout">Logout</a>
+                    {% else %}
+                        <a href="/signup">Signup</a>
+                        <a href="/login">Login</a>
+                    {% endif %}
                 </div>
             </nav>
             {% block content %}{% endblock %}
