--- a/grocery_app/templates/home.html
+++ b/grocery_app/templates/home.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
+{% if current_user.is_authenticated %}
+    <p>Welcome {{ current_user.username }}</p> 
+{% endif %}
+
 <h1>Grocery Store Tracker</h1>
 
 <p><em>The best place to track prices and find the hottest deals!</em></p>
