--- a/grocery_app/templates/item_detail.html
+++ b/grocery_app/templates/item_detail.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <h1>Item - {{ item.name }}</h1>
+<em>Created by: {{ item.created_by.username }}</em>
 
 <p><img src="{{ item.photo_url }}" width="250px" height="250px"></p>
 
@@ -17,12 +18,7 @@
 <form method="POST">
     <fieldset>
         <legend>Please enter your information:</legend>
-
-
-
-        <!-- TODO: Remove the next paragraph and use the `form` object passed in 
-            from the route to render a form. -->
-            
+          
             {{ form.csrf_token }}
             {{ form.name.label }}
             <br>
