--- a/grocery_app/templates/store_detail.html
+++ b/grocery_app/templates/store_detail.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <h1>Store - {{ store.title }}</h1>
+<em>Created by: {{ store.created_by.username }}</em>
 
 <strong>Address:</strong> {{ store.address }}
 
@@ -13,6 +14,7 @@
         <a href="/item/{{ item.id }}"><img src="{{ item.photo_url }}" alt="{{ item.name }}" width="200px">
         <p><strong>{{ item.name }}</strong></p></a>
         <p><strong>Price: ${{ item.price }}</strong></p>
+        <em>Created by: {{ item.created_by.username }}</em>
     </div>
     {% endfor %}
 </div>
@@ -24,10 +26,6 @@
     <fieldset>
         <legend>Please enter your information:</legend>
 
-
-
-        <!-- TODO: Remove the next paragraph and use the `form` object passed in 
-            from the route to render a form. -->
         {{ form.csrf_token }}
         {{ form.title.label }}
         <br>
